--- a/Web_Fundamentals/Registration Forms/fake_blog.html
+++ b/Web_Fundamentals/Registration Forms/fake_blog.html
@@ -17,6 +17,56 @@
             portfolio is inspired by
             many years of dedication and hardwork bringing all the skillset to
             demonstrate a complete color of photography</p>
-        <a href="click"></a>
+        <a href="forms_alvin_rumbaoa_assignment.html">Sign up now!</a><br>
+        <hr>
+        <h4>Progress through the years</h4>
+        <table>
+            <thead>
+                <tr>
+                    <th>Year 1</th>
+                    <th>Year 2</th>
+                    <th>Year 3</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>$25M</td>
+                    <td>$50M</td>
+                    <td>$1.5B</td>
+                </tr>
+                <tr>
+                    <td>$27M</td>
+                    <td>$55M</td>
+                    <td>$1.7B</td>
+                </tr>
+            </tbody>
+        </table>
+        <h2>Other Services:</h2>
+        <ul>
+            <li>Filter Turtorials</li>
+            <li>Camera Lens,Accesories Rental</li>
+            <li>DSLR (Mirrorless DSLR)</li>
+        </ul>
+        <h2>3 Steps on How to Join our Program</h2>
+        <ol>
+            <li>Register</li>
+            <li>Learn</li>
+            <li>Explore</li>
+        </ol>
+
+        <h5>Subscribe fot Daily newsletter</h5>
+        <form>
+            <label for="email">Email:</label>
+            <input type="text" id="email" name="email"><br>
+            <input type="radio" id="agree">Please Send Me Updates
+            <input type="radio" id="notagree">Do not Send Me Updates
+
+            How did you hear about us?
+            <input type="checkbox">Facebook<br>
+            <input type="checkbox">Instagram<br>
+            <input type="checkbox">Other:<br>
+            <input type="submit" id="submit" name="Submit">
+        </form>
+
     </body>
 </html>
