Plotting the blocks

--- a/Web_Fundamentals/Registration Forms/fake_blog.html
+++ b/Web_Fundamentals/Registration Forms/fake_blog.html
@@ -20,28 +20,30 @@
             demonstrate a complete color of photography</p>
         <a href="forms_alvin_rumbaoa_assignment.html">Sign up now!</a><br>
         <hr>
-        <h4>Progress through the years</h4>
-        <table>
-            <thead>
-                <tr>
-                    <th>Year 1</th>
-                    <th>Year 2</th>
-                    <th>Year 3</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>$25M</td>
-                    <td>$50M</td>
-                    <td>$1.5B</td>
-                </tr>
-                <tr>
-                    <td>$27M</td>
-                    <td>$55M</td>
-                    <td>$1.7B</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="prog">
+            <h4 class="prog">Progress through the years</h4>
+            <table id="tbl">
+                <thead>
+                    <tr>
+                        <th>Year 1</th>
+                        <th>Year 2</th>
+                        <th>Year 3</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>$25M</td>
+                        <td>$50M</td>
+                        <td>$1.5B</td>
+                    </tr>
+                    <tr>
+                        <td>$27M</td>
+                        <td>$55M</td>
+                        <td>$1.7B</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
         <h2>Other Services:</h2>
         <ul>
             <li>Filter Turtorials</li>
@@ -68,6 +70,20 @@
             <input type="checkbox">Other:<br>
             <input type="submit" id="submit" name="Submit">
         </form>
+        <div id="overflow"></div>
 
+        <p>block</p>
+        <p>block</p>
+        <p>block</p>
+        <a href="inline">Mark 1</a>
+        <a href="inline">Mark 1</a>
+        <a href="inline">Mark 1</a>
+
+
+        <div id="container">
+            <div id="box1">BOX 1</div>
+            <div id="box2">BOX 2</div>
+            <div id="box3">BOX 3</div>
+        </div>
     </body>
 </html>
