--- a/Web_Fundamentals/Flex Navbar/flex.html
+++ b/Web_Fundamentals/Flex Navbar/flex.html
@@ -8,9 +8,19 @@
         <title>FlexBox</title>
     </head>
     <body>
+
+        <div class="nav">
+            <img src="dojo-icon.png" alt="dojo-icon" height="90" width="100">
+            <h1>Coding Dojo</h1>
+            <ul>
+                <li class="button"><a href="#">Home</a></li>
+                <li class="button"><a href="#">Contacts</a></li>
+                <li class="button"><a href="#">About Me</a></li>
+                <li class="button"><a href="#">Cool Sites</a></li>
+            </ul>
+        </div>
         <div class="center-box">
             <div class="center-item"> </div>
         </div>
-
     </body>
 </html>
