--- a/Web_Fundamentals/Flex Navbar/flex.html
+++ b/Web_Fundamentals/Flex Navbar/flex.html
@@ -13,9 +13,10 @@
             <img src="dojo-icon.png" alt="dojo-icon" height="90" width="100">
             <h1>Coding Dojo</h1>
             <ul>
-                <li class="button"><a href="#">Home</a></li>
+                <li class="button"><a href="https://www.codingdojo.com/">Home</a></li>
                 <li class="button"><a href="#">Contacts</a></li>
-                <li class="button"><a href="#">About Me</a></li>
+                <li class="button"><a
+                        href="https://www.codingdojo.com/meet-the-team">About Me</a></li>
                 <li class="button"><a href="#">Cool Sites</a></li>
             </ul>
         </div>
