--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -17,10 +17,10 @@
             </div>
             <div id="middle-content"> <!--Main Content-->
                 <div id="img-holder">
-                    <img src="photo_of_me.jpg">
+                    <img src="photo_of_me.jpg" alt="photome">
                 </div>
                 <div id="box-holder">
-                    <h2>&nbsp About...</h2>
+                    <h2>About...</h2>
                     <p>Hello! I'm an extremely driven and creative Full Stack
                         Developer who is currently open for career opportunities
                         as a front-end or back-end web developer in the Greater
@@ -35,7 +35,7 @@
             </div>
             <div id="sub-content"> <!--Sub Content-->
                 <div class="box">
-                    <h2>&nbspLa Mode</h2>
+                    <h2>La Mode</h2>
                     <img src="lamode.png" alt="lamode" class="img-sub-content">
                     <div class="description">
                         <p>La Mode is an Ecommerce website for designed to
@@ -46,8 +46,8 @@
                             compile a shopping cart for making a final purchase.</p>
                     </div>
 
-                    <h2>&nbspTechnologies:</h2>
-                    <div id="prog-lang">
+                    <h2>Technologies:</h2>
+                    <div class="prog-lang">
                         <img src="php.png" alt="php" class="prog-img">
                         <img src="codeigniter.png" alt="php"
                             class="prog-img">
@@ -61,7 +61,7 @@
                     <span>La Mode</span>
                 </div>
                 <div class="box">
-                    <h2>&nbsp Family Contacts</h2>
+                    <h2> Family Contacts</h2>
                     <img src="familycontacts.png" alt="famcont"
                         class="img-sub-content">
                     <div class="description">
@@ -74,8 +74,8 @@
                             related to you</p>
                     </div>
 
-                    <h2>&nbspTechnologies:</h2>
-                    <div id="prog-lang">
+                    <h2>Technologies:</h2>
+                    <div class="prog-lang">
                         <img src="JavaScript.png" alt="php"
                             class="prog-img">
                         <img src="mongodb.png" alt="php" class="prog-img">
@@ -89,7 +89,7 @@
                     <span>Family Contacts</span>
                 </div>
                 <div class="box">
-                    <h2>&nbsp fiveEleven</h2>
+                    <h2>fiveEleven</h2>
                     <img src="fiveEleven.png" alt="five-eleven"
                         class="img-sub-content">
                     <div class="description">
@@ -103,8 +103,8 @@
                             across the nation.</p>
                     </div>
 
-                    <h2>&nbspTechnologies:</h2>
-                    <div id="prog-lang">
+                    <h2>Technologies:</h2>
+                    <div class="prog-lang">
                         <img src="python.png" alt="php" class="prog-img">
                         <img src="django.png" alt="php"
                             class="prog-img">
@@ -131,5 +131,6 @@
                     <li><img src="codepen.png" alt="gh" class="footer-icons">jaynedev</li>
                 </ul>
             </div>
-        </body>
-    </html>
+        </div>
+    </body>
+</html>
