--- a/JavaScript/example.html
+++ b/JavaScript/example.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width= , initial-scale=1.0">
         <title>Document</title>
-        <script
+        <script type="text/javascript"
             src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script>
+        <script type="text/javascript">
             $(document).ready(function() {
             $("#btn").click(function(){
                 var pTag= $("#p-tag");
