--- a/JQuery/Disappearing Ninja/index.html
+++ b/JQuery/Disappearing Ninja/index.html
@@ -10,16 +10,18 @@
             src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     </head>
     <body>
-        <h1>Disappearing Shinobi</h1>
-        <img src="img-1.jpg" alt="minato" class="box-img">
-        <img src="img-2.png" alt="uchiha" class="box-img">
-        <img src="img-3.jpg" alt="madara" class="box-img">
-        <img src="img-4.png" alt="naruto" class="box-img">
-        <img src="img-5.png" alt="sage-mode" class="box-img">
-        <img src="img-6.png" alt="tsunade" class="box-img">
-        <img src="img-7.png" alt="hashirama" class="box-img">
-        <img src="img-8.png" alt="madarasix" class="box-img">
-        <button id="btn">Restore All Image</button>
-        <script type="text/javascript" src="jQuery.js"> </script>
+        <div class="container">
+            <h1>Disappearing Shinobi</h1>
+            <img src="img-1.jpg" alt="minato" class="box-img">
+            <img src="img-2.png" alt="uchiha" class="box-img">
+            <img src="img-3.jpg" alt="madara" class="box-img">
+            <img src="img-4.png" alt="naruto" class="box-img">
+            <img src="img-5.png" alt="sage-mode" class="box-img">
+            <img src="img-6.png" alt="tsunade" class="box-img">
+            <img src="img-7.png" alt="hashirama" class="box-img">
+            <img src="img-8.png" alt="madarasix" class="box-img">
+            <button id="btn">Restore All Image</button>
+            <script type="text/javascript" src="jQuery.js"> </script>
+        </div>
     </body>
 </html>
